# cdsco-indiaai-regulatory-ai

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt
data/sample/: sample_clinical_document.txt  sample_sae_report.json
data/schemas/: sae_report_schema.json  sugam_checklist_schema.json
docs/: architecture.md  model_card.md
notebooks/: demo_pipeline.ipynb
services/adios-inference/: Dockerfile  README.md  download_models.py  main.py  requirements.txt
src/: config.rs  error.rs  inference_client.rs  main.rs  ollama.rs
src/anonymisation/: anonymiser.py  detector.py  mod.rs  schemas.py
src/api/: main.py
src/api/routes/: anonymisation.py  classification.py  completeness.py  inspection.py  summarisation.py
src/classification/: mod.rs  sae_classifier.py  schemas.py
src/completeness/: checker.py  comparator.py  mod.rs  schemas.py
src/core/: config.py  llm.py
src/inspection/: mod.rs  report_generator.py  schemas.py
src/orchestrator/: mod.rs
src/summarisation/: document_summariser.py  mod.rs  schemas.py
tests/: test_anonymisation.py  test_classification.py  test_completeness.py  test_summarisation.py
