[package]
name = "adios-regulatory-ai"
version = "0.1.0"
edition = "2021"
description = "CDSCO-IndiaAI Hackathon — AdiOS Platform sovereign regulatory AI"
authors = ["AdiOS Platform Pvt Ltd <malay@adiosplat.io>"]

[[bin]]
name = "adios-regulatory-ai"
path = "src/main.rs"

[dependencies]
axum              = { version = "0.7", features = ["macros"] }
tokio             = { version = "1",    features = ["full"] }
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
reqwest           = { version = "0.12", features = ["json"] }
regex             = "1"
sha2              = "0.10"
hmac              = "0.12"
hex               = "0.4"
similar           = { version = "2",    features = ["text"] }
dotenvy           = "0.15"
anyhow            = "1"
thiserror         = "2"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http        = { version = "0.5",  features = ["cors", "trace"] }
once_cell         = "1"

[dev-dependencies]
tokio  = { version = "1", features = ["full"] }
